syntax="proto3";

package jpacifica;

option java_package="com.trs.pacifica.proto";
option java_outer_classname="RpcCommon";

message ReplicaId {
  optional string group_name = 1;
  optional string node_id = 2;
}

enum LogEntryType {
  OP_DATA = 0;
  NO_OP = 1;
}

message LogEntryMeta {
  optional int64 log_term = 1;
  optional int32 data_len = 2;
  optional LogEntryType type = 3;
  optional int64 checksum = 4;
}