syntax = "proto3";

package jpacifica;
import "_common.proto";
option java_package = "com.trs.pacifica.proto";
option java_outer_classname = "RpcRequest";



message AppendEntriesRequest {
  optional ReplicaId primary_id = 1;
  optional ReplicaId target_id = 2;
  optional int64 prev_log_index = 3;
  optional int64 prev_log_term = 4;
  optional int64 commit_point = 5;
  optional int64 term = 6;
  optional int64 version = 7;
  repeated LogEntryMeta log_meta = 8;
  optional bytes log_data = 9;
}

message AppendEntriesResponse {
  optional bool success = 1;
  optional int64 term = 2;
  optional int64 version = 3;
  optional int64 commit_point = 4;
  optional int64 last_log_index = 5;
}

message ReplicaRecoverRequest {
  optional ReplicaId recover_id = 1;
  optional ReplicaId primary_id = 2;
  optional int64 term = 3;
}

message ReplicaRecoverResponse {
  optional bool success = 1;
  optional int64 term = 2;
  optional int64 version = 3;
}


message InstallSnapshotRequest {
  optional ReplicaId primary_id = 1;
  optional ReplicaId target_id = 2;
  optional int64 term = 3;
  optional int64 version = 4;
  optional SnapshotMeta meta = 5;
  optional int64 readerId = 6;
}

message InstallSnapshotResponse {
  optional bool success = 1;
  optional int64 term = 2;
  optional int64 version = 3;
}

message GetFileRequest {
  optional ReplicaId target_id = 1;
  optional int64 reader_id = 2;
  optional string filename = 3;
  optional int32 offset = 4;
  optional int32 length = 5;
}

message GetFileResponse {
  optional bool eof = 1;
  optional bytes data = 2;
  optional int64 read_length = 3;
}